# canvas-dl

./: .gitignore  README.md  canvas-dl-cli.spec  canvas-dl-gui.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
packaging/: entry_cli.py  entry_gui.py
scripts/: build_binaries.ps1  build_binaries.sh
src/canvas_dl/: api.py  archive.py  cli.py  config.py  content.py  download.py  gui.py  gui_controller.py  merge.py  pdf_export.py  utils.py
tests/: test_archive.py  test_content.py  test_download.py  test_gui_controller.py  test_merge.py  test_utils.py
