[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-course-dl"
version = "0.2.0"
description = "Download files, folders and assignments from Canvas — CLI and desktop GUI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Iason Skylitsis" }
]
requires-python = ">=3.9"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.2",
  "python-dotenv>=1.0.0",
  "platformdirs>=4.0.0",
  "questionary>=2.0.1",
  "pypdf>=4.0.0",
  "fpdf2>=2.7.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "tomli-w>=1.0.0; python_version < '3.11'"
]

[project.optional-dependencies]
gui = [
  "customtkinter>=5.2.0",
]
build = [
  "pyinstaller>=6.0.0",
  "customtkinter>=5.2.0",
]
dev = [
  "pytest>=7.0.0",
  "customtkinter>=5.2.0",
]

[project.urls]
Homepage = "https://github.com/iasonsky/canvas-dl"
Repository = "https://github.com/iasonsky/canvas-dl"

[project.scripts]
canvas-dl = "canvas_dl.cli:main"
canvas-dl-gui = "canvas_dl.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = false
